--- a/src/census-income.ipynb
+++ b/src/census-income.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from collections import defaultdict\n",
     "\n",
     "# for visualizations\n",
     "import seaborn as sns\n",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -539,10 +540,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>   3710.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 17 Nov 2017</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Sat, 18 Nov 2017</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>19:44:49</td>     <th>  Log-Likelihood:    </th>  <td>  22185.</td> \n",
+       "  <th>Time:</th>                 <td>13:42:47</td>     <th>  Log-Likelihood:    </th>  <td>  22185.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>199523</td>      <th>  AIC:               </th> <td>-4.434e+04</td>\n",
@@ -627,8 +628,8 @@
        "Dep. Variable:           targetIncome   R-squared:                       0.195\n",
        "Model:                            OLS   Adj. R-squared:                  0.195\n",
        "Method:                 Least Squares   F-statistic:                     3710.\n",
-       "Date:                Fri, 17 Nov 2017   Prob (F-statistic):               0.00\n",
-       "Time:                        19:44:49   Log-Likelihood:                 22185.\n",
+       "Date:                Sat, 18 Nov 2017   Prob (F-statistic):               0.00\n",
+       "Time:                        13:42:47   Log-Likelihood:                 22185.\n",
        "No. Observations:              199523   AIC:                        -4.434e+04\n",
        "Df Residuals:                  199509   BIC:                        -4.420e+04\n",
        "Df Model:                          13                                         \n",
@@ -664,7 +665,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +780,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +909,7 @@
        "Name: HispanicOrigin, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +961,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -1111,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1144,7 +1145,7 @@
        "Name: BirthCountry, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1169,7 @@
        "Name: BirthCountry, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -1211,7 +1212,7 @@
        "Name: HouseholdStatus, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1247,7 @@
        "Name: HouseholdStatus, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1293,7 @@
        "Name: PrevState, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3239,7 +3240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3250,7 +3251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3298,7 +3299,7 @@
        "      <td>-45.486705</td>\n",
        "      <td>-0.617677</td>\n",
        "      <td>1.094478</td>\n",
-       "      <td>-1.122027</td>\n",
+       "      <td>-1.122026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3311,7 +3312,7 @@
        "      <td>-15.842541</td>\n",
        "      <td>28.451046</td>\n",
        "      <td>-7.561815</td>\n",
-       "      <td>0.985289</td>\n",
+       "      <td>0.985290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3365,14 +3366,14 @@
        "4 -447.367195 -167.926438 -671.331974 -63.046326 -13.147034  33.220744   \n",
        "\n",
        "           6          7         8         9  \n",
-       "0 -45.486705  -0.617677  1.094478 -1.122027  \n",
-       "1 -15.842541  28.451046 -7.561815  0.985289  \n",
+       "0 -45.486705  -0.617677  1.094478 -1.122026  \n",
+       "1 -15.842541  28.451046 -7.561815  0.985290  \n",
        "2   7.465579  -0.582813 -0.705724 -1.419406  \n",
        "3  15.926933  -0.593192 -1.086352  1.036290  \n",
        "4  15.177789  -0.592779 -1.011346  1.027940  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3419,17 +3420,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'c' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-2b66fd261ee5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'c' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "c"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Training set\n",
+    "\n",
+    "# [height, weight, shoeSize] \n",
+    "X = [[181, 80, 44], [177, 70, 43], [160, 60, 38], [154, 54, 37], [166, 65, 40], \n",
+    "     [190, 90, 47], [175, 64, 39], [177, 70, 40], [159, 55, 37], [171, 75, 42], [181, 85, 43]]\n",
+    "\n",
+    "# [male or female]\n",
+    "Y = [0,0,1,1,0,0,1,1,1,0,0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3440,7 +3464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3448,8 +3472,63 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# metrics\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import ShuffleSplit"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelMetrics(object):\n",
+    "\n",
+    "    # Random permutation cross-validator with 80-20 train test split\n",
+    "    cv = ShuffleSplit(n_splits = 2, test_size = 0.2) # change this to 10\n",
+    "    # dictionary to store scores\n",
+    "    model_scores = defaultdict(lambda:None)\n",
+    "\n",
+    "    def __init__(self, model_name, model_obj, features, response):\n",
+    "        self.model = model_name\n",
+    "        self.model_obj = model_obj\n",
+    "        ModelMetrics.model_scores[model_name] = []\n",
+    "        self.cv = ModelMetrics.cv\n",
+    "        self.features = features\n",
+    "        self.response = response\n",
+    "        self.model_scores = ModelMetrics.model_scores\n",
+    "\n",
+    "    def model_scoring(self, scoring_metric):\n",
+    "        for metric in scoring_metric:\n",
+    "            n_fold_score = cross_val_score(self.model_obj,self.features,\n",
+    "                                                           self.response,\n",
+    "                                                           cv=self.cv,\n",
+    "                                                           scoring=metric)\n",
+    "            mean_score = np.mean(n_fold_score)\n",
+    "            self.model_scores[self.model].append({metric:mean_score})\n",
+    "        return model_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3460,123 +3539,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating the classifiers\n",
     "\n",
     "# Classifier implementing Logistic Regression\n",
-    "clf_LogReg = LogisticRegression()"
+    "clf_log_reg = LogisticRegression()\n",
+    "# Creating object for metrics\n",
+    "log_reg_metrics_obj = ModelMetrics(\"Logistic Regression\", clf_log_reg, X, Y)\n",
+    "log_reg_metrics = log_reg_metrics_obj.model_scoring(['accuracy','precision','recall'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
+       "defaultdict(None,\n",
+       "            {'Logistic Regression': [{'accuracy': 1.0},\n",
+       "              {'precision': 1.0},\n",
+       "              {'recall': 0.5}]})"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf_LogReg.fit(X,Y)"
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.9546958 ,  0.95073423,  0.95233561,  0.95213512,  0.95188452,\n",
-       "        0.95258621,  0.95093224,  0.95168404,  0.95303729,  0.95173416])"
+       "collections.defaultdict"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cross_val_score(clf_LogReg, X, Y, cv=10)"
+    "type(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.9546958   0.95073423  0.95233561  0.95213512  0.95188452  0.95258621\n",
-      "  0.95093224  0.95168404  0.95303729  0.95173416]\n",
-      "[ 0.7518797   0.69452888  0.70767004  0.7394247   0.72133758  0.7218845\n",
-      "  0.71691792  0.72096774  0.72699849  0.70864947]\n",
-      "[ 0.40355125  0.36884584  0.39499192  0.35298869  0.36591276  0.38368336\n",
-      "  0.3457189   0.36106624  0.38933764  0.37722132]\n"
+      "key= Logistic Regression \n",
+      "Val= [{'accuracy': 1.0}, {'precision': 1.0}, {'recall': 0.5}]\n"
      ]
     }
    ],
    "source": [
-    "for i in ['accuracy','precision','recall']:\n",
-    "    print(cross_val_score(clf_LogReg, X, Y, scoring=i, cv=10))"
+    "for key, val in a.items():\n",
+    "    print('key=',key,\"\\nVal=\",val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.95241651338442179"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf_LogReg.score(X,Y)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0021386424387409893"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([ 0.9546958 ,  0.95073423,  0.95233561,  0.95213512,  0.95188452,\n",
-    "        0.95258621,  0.95093224,  0.95168404,  0.95303729,  0.95173416]).std() * 2"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
