--- a/src/census-income.ipynb
+++ b/src/census-income.ipynb
@@ -540,10 +540,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>   3710.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Mon, 20 Nov 2017</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Fri, 24 Nov 2017</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>15:01:37</td>     <th>  Log-Likelihood:    </th>  <td>  22185.</td> \n",
+       "  <th>Time:</th>                 <td>09:19:31</td>     <th>  Log-Likelihood:    </th>  <td>  22185.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>199523</td>      <th>  AIC:               </th> <td>-4.434e+04</td>\n",
@@ -628,8 +628,8 @@
        "Dep. Variable:           targetIncome   R-squared:                       0.195\n",
        "Model:                            OLS   Adj. R-squared:                  0.195\n",
        "Method:                 Least Squares   F-statistic:                     3710.\n",
-       "Date:                Mon, 20 Nov 2017   Prob (F-statistic):               0.00\n",
-       "Time:                        15:01:37   Log-Likelihood:                 22185.\n",
+       "Date:                Fri, 24 Nov 2017   Prob (F-statistic):               0.00\n",
+       "Time:                        09:19:31   Log-Likelihood:                 22185.\n",
        "No. Observations:              199523   AIC:                        -4.434e+04\n",
        "Df Residuals:                  199509   BIC:                        -4.420e+04\n",
        "Df Model:                          13                                         \n",
@@ -3343,7 +3343,7 @@
        "      <td>-45.486710</td>\n",
        "      <td>-0.617690</td>\n",
        "      <td>1.094468</td>\n",
-       "      <td>-1.122285</td>\n",
+       "      <td>-1.122288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3356,7 +3356,7 @@
        "      <td>-15.842546</td>\n",
        "      <td>28.451033</td>\n",
        "      <td>-7.561831</td>\n",
-       "      <td>0.984728</td>\n",
+       "      <td>0.984727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3395,7 +3395,7 @@
        "      <td>15.177788</td>\n",
        "      <td>-0.592788</td>\n",
        "      <td>-1.011354</td>\n",
-       "      <td>1.027338</td>\n",
+       "      <td>1.027339</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3410,11 +3410,11 @@
        "4 -447.367195 -167.926438 -671.331974 -63.046325 -13.147034  33.220742   \n",
        "\n",
        "           6          7         8         9  \n",
-       "0 -45.486710  -0.617690  1.094468 -1.122285  \n",
-       "1 -15.842546  28.451033 -7.561831  0.984728  \n",
+       "0 -45.486710  -0.617690  1.094468 -1.122288  \n",
+       "1 -15.842546  28.451033 -7.561831  0.984727  \n",
        "2   7.465578  -0.582823 -0.705732 -1.419403  \n",
        "3  15.926930  -0.593202 -1.086360  1.035783  \n",
-       "4  15.177788  -0.592788 -1.011354  1.027338  "
+       "4  15.177788  -0.592788 -1.011354  1.027339  "
       ]
      },
      "execution_count": 26,
@@ -3457,12 +3457,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_small = X.head(1000)\n",
-    "Y_small = Y.head(1000)"
+    "X_small = X.head(5000)\n",
+    "Y_small = Y.head(5000)"
    ]
   },
   {
@@ -3509,7 +3509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3527,7 +3527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3591,7 +3591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3612,17 +3612,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
       "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n",
       "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
@@ -3660,7 +3656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3681,7 +3677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3713,7 +3709,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model= Logistic Regression \n",
+      "Scores= [{'accuracy': 0.95079999999999987}, {'precision': 0.63985783396352003}, {'recall': 0.32342695455273207}]\n",
+      "Model= Support vector machines \n",
+      "Scores= [{'accuracy': 0.94330000000000003}, {'precision': 0.0}, {'recall': 0.0}]\n",
+      "Model= Gaussian Naive Bayes \n",
+      "Scores= [{'accuracy': 0.69510000000000005}, {'precision': 0.15086273655008983}, {'recall': 0.95084581409943247}]\n",
+      "Model= k-nearest neighbors \n",
+      "Scores= [{'accuracy': 0.94290000000000007}, {'precision': 0.48824706940806006}, {'recall': 0.15033820039228649}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5000\n",
+    "for i,j in ModelMetrics.model_scores.items():\n",
+    "    print(\"Model=\",i,\"\\nScores=\",j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3732,8 +3754,7 @@
     }
    ],
    "source": [
-    "for i,j in ModelMetrics.model_scores.items():\n",
-    "    print(\"Model=\",i,\"\\nScores=\",j)"
+    "# 1000"
    ]
   },
   {
@@ -3833,22 +3854,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Training set\n",
-    "\n",
-    "# # [height, weight, shoeSize] \n",
-    "# X = [[181, 80, 44], [177, 70, 43], [160, 60, 38], [154, 54, 37], [166, 65, 40], \n",
-    "#      [190, 90, 47], [175, 64, 39], [177, 70, 40], [159, 55, 37], [171, 75, 42], [181, 85, 43]]\n",
-    "\n",
-    "# # [male or female]\n",
-    "# Y = [0,0,1,1,0,0,1,1,1,0,0]"
-   ]
   },
   {
    "cell_type": "code",
@@ -3938,9 +3943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
