--- a/src/census-income.ipynb
+++ b/src/census-income.ipynb
@@ -543,7 +543,7 @@
        "  <th>Date:</th>             <td>Fri, 24 Nov 2017</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:08:39</td>     <th>  Log-Likelihood:    </th>  <td>  22185.</td> \n",
+       "  <th>Time:</th>                 <td>21:12:39</td>     <th>  Log-Likelihood:    </th>  <td>  22185.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>199523</td>      <th>  AIC:               </th> <td>-4.434e+04</td>\n",
@@ -629,7 +629,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.195\n",
        "Method:                 Least Squares   F-statistic:                     3710.\n",
        "Date:                Fri, 24 Nov 2017   Prob (F-statistic):               0.00\n",
-       "Time:                        21:08:39   Log-Likelihood:                 22185.\n",
+       "Time:                        21:12:39   Log-Likelihood:                 22185.\n",
        "No. Observations:              199523   AIC:                        -4.434e+04\n",
        "Df Residuals:                  199509   BIC:                        -4.420e+04\n",
        "Df Model:                          13                                         \n",
@@ -4429,8 +4429,8 @@
        "      <td>-39.122762</td>\n",
        "      <td>2.385361</td>\n",
        "      <td>1.256710</td>\n",
-       "      <td>0.119340</td>\n",
-       "      <td>0.841577</td>\n",
+       "      <td>0.119349</td>\n",
+       "      <td>0.841623</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4442,8 +4442,8 @@
        "      <td>-24.142538</td>\n",
        "      <td>-0.927172</td>\n",
        "      <td>-1.016997</td>\n",
-       "      <td>-1.472022</td>\n",
-       "      <td>-0.230194</td>\n",
+       "      <td>-1.472043</td>\n",
+       "      <td>-0.230106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -4454,9 +4454,9 @@
        "      <td>-13.070459</td>\n",
        "      <td>15.885651</td>\n",
        "      <td>0.728191</td>\n",
-       "      <td>1.405955</td>\n",
-       "      <td>0.400913</td>\n",
-       "      <td>1.034173</td>\n",
+       "      <td>1.405954</td>\n",
+       "      <td>0.400893</td>\n",
+       "      <td>1.034258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -4468,8 +4468,8 @@
        "      <td>24.926329</td>\n",
        "      <td>1.616421</td>\n",
        "      <td>-0.938406</td>\n",
-       "      <td>0.308594</td>\n",
-       "      <td>0.181721</td>\n",
+       "      <td>0.308592</td>\n",
+       "      <td>0.181727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -4481,8 +4481,8 @@
        "      <td>23.967267</td>\n",
        "      <td>1.601772</td>\n",
        "      <td>-0.929753</td>\n",
-       "      <td>0.280614</td>\n",
-       "      <td>0.209147</td>\n",
+       "      <td>0.280611</td>\n",
+       "      <td>0.209154</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4497,11 +4497,11 @@
        "4 -447.353242 -167.928242 -671.302999 -62.323231 -13.166087  23.967267   \n",
        "\n",
        "          6         7         8         9  \n",
-       "0  2.385361  1.256710  0.119340  0.841577  \n",
-       "1 -0.927172 -1.016997 -1.472022 -0.230194  \n",
-       "2  0.728191  1.405955  0.400913  1.034173  \n",
-       "3  1.616421 -0.938406  0.308594  0.181721  \n",
-       "4  1.601772 -0.929753  0.280614  0.209147  "
+       "0  2.385361  1.256710  0.119349  0.841623  \n",
+       "1 -0.927172 -1.016997 -1.472043 -0.230106  \n",
+       "2  0.728191  1.405954  0.400893  1.034258  \n",
+       "3  1.616421 -0.938406  0.308592  0.181727  \n",
+       "4  1.601772 -0.929753  0.280611  0.209154  "
       ]
      },
      "execution_count": 26,
@@ -4667,8 +4667,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_small = X.head(1000)\n",
-    "Y_small = Y.head(1000)"
+    "X_small = X.head(5000)\n",
+    "Y_small = Y.head(5000)"
    ]
   },
   {
@@ -4687,7 +4687,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "208 ms ± 13.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.07 s ± 62 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -4714,32 +4714,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "489 ms ± 8.98 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "7.16 s ± 166 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -4769,7 +4747,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "187 ms ± 4.12 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "1.17 s ± 23.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -4940,6 +4918,10 @@
       "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
       "  warnings.warn(\"Variables are collinear.\")\n",
       "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
+      "  warnings.warn(\"Variables are collinear.\")\n",
+      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
+      "  warnings.warn(\"Variables are collinear.\")\n",
+      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
       "  warnings.warn(\"Variables are collinear.\")\n"
      ]
     },
@@ -4947,17 +4929,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "510 ms ± 6.57 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.56 s ± 6.86 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
-      "  warnings.warn(\"Variables are collinear.\")\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
-      "  warnings.warn(\"Variables are collinear.\")\n",
       "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
       "  warnings.warn(\"Variables are collinear.\")\n",
       "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
@@ -4989,48 +4967,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "221 ms ± 4.24 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/envs/python3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
+      "618 ms ± 29 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -5073,15 +5013,15 @@
      "output_type": "stream",
      "text": [
       "Model= Logistic Regression \n",
-      "Scores= [{'accuracy': 0.95999999999999996}, {'precision': 0.41269841269841273}, {'recall': 0.25454545454545457}]\n",
+      "Scores= [{'accuracy': 0.95566666666666666}, {'precision': 0.63629888629888631}, {'recall': 0.34552833046753456}]\n",
       "Model= k-nearest neighbors \n",
-      "Scores= [{'accuracy': 0.95999999999999996}, {'precision': 0.55555555555555547}, {'recall': 0.093939393939393948}]\n",
+      "Scores= [{'accuracy': 0.95066666666666666}, {'precision': 0.59027777777777779}, {'recall': 0.15971710472447395}]\n",
       "Model= Decision Tree \n",
-      "Scores= [{'accuracy': 0.93833333333333335}, {'precision': 0.3247863247863248}, {'recall': 0.38787878787878788}]\n",
+      "Scores= [{'accuracy': 0.93433333333333335}, {'precision': 0.3754638218923933}, {'recall': 0.34927945631703922}]\n",
       "Model= Linear Discriminant Analysis \n",
-      "Scores= [{'accuracy': 0.93999999999999995}, {'precision': 0.26936026936026936}, {'recall': 0.25454545454545457}]\n",
+      "Scores= [{'accuracy': 0.94366666666666665}, {'precision': 0.4508294545888531}, {'recall': 0.47168488495865063}]\n",
       "Model= Random Forest Classifier \n",
-      "Scores= [{'accuracy': 0.95500000000000007}, {'precision': 0.33333333333333331}, {'recall': 0.0}]\n"
+      "Scores= [{'accuracy': 0.95400000000000007}, {'precision': 0.67771836007130126}, {'recall': 0.1719223368541718}]\n"
      ]
     }
    ],
